Agentforce/force-app/main/default/objects/Debrief__c/Debrief__c.object-meta.xml
<CustomObject>
    <description>Debriefs take place after the closure of an Opportunity w/wo a Bid from an internal or external perspective.</description>
    <label>Debrief</label>
    <nameField>
        <displayFormat>DB-{00000}</displayFormat>
        <label>Debrief No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debriefs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>