Agentforce/force-app/main/default/objects/Debrief__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>Annual Contractual Revenue of Opportunity</description>
    <formula>Opportunity__r.Annual_Contractual_Revenue__c</formula>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>