Agentforce/force-app/main/default/objects/Debrief__c/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <description>Opportunity Award Date</description>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>