Agentforce/force-app/main/default/objects/Debrief__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Bid</description>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>Debrief</relationshipLabel>
    <relationshipName>Debriefs</relationshipName>
    <type>Lookup</type>
</CustomField>