Agentforce/force-app/main/default/objects/Debrief__c/fields/Bid_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Bid_CaseSafeID__c</fullName>
    <formula>Bid__r.Bid_CaseSafeId__c</formula>
    <label>Bid CaseSafeID</label>
    <type>Text</type>
</CustomField>