Agentforce/force-app/main/default/objects/Debrief__c/fields/Bid_Quality_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Bid_Quality_Assessment__c</fullName>
    <description>Review of the Bid quality against other bidders</description>
    <inlineHelpText>Bid quality - Was it to your expectation? How did it compare to the winning &amp; other bidders?</inlineHelpText>
    <label>Bid Quality Assessment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>