Agentforce/force-app/main/default/objects/Debrief__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Opportunity Owner Business Unit</description>
    <formula>TEXT(Opportunity__r.Owner.Business_Unit__c)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>