Agentforce/force-app/main/default/objects/Debrief__c/fields/Communication_On_Colleague_Development__c.field-meta.xml
<CustomField>
    <fullName>Communication_On_Colleague_Development__c</fullName>
    <description>Feedback on colleague development</description>
    <inlineHelpText>Did we effectively communicate how OCS retain and develop our colleagues?</inlineHelpText>
    <label>Communication On Colleague Development</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>