Agentforce/force-app/main/default/objects/Debrief__c/fields/Consideration_For_Future_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Consideration_For_Future_Opportunities__c</fullName>
    <description>Feedback on whether the customer would re-invite for other opportunities</description>
    <inlineHelpText>Would you consider OCS for future opportunities</inlineHelpText>
    <label>Consideration For Future Opportunities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>