Agentforce/force-app/main/default/objects/Debrief__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact at Customer</description>
    <inlineHelpText>Customer Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Debriefs</relationshipLabel>
    <relationshipName>Debriefs</relationshipName>
    <type>Lookup</type>
</CustomField>