Agentforce/force-app/main/default/objects/Debrief__c/fields/Contact_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Contact_CaseSafeID__c</fullName>
    <formula>Contact__r.ContactCaseSafeID__c</formula>
    <label>Contact CaseSafeID</label>
    <type>Text</type>
</CustomField>