Agentforce/force-app/main/default/objects/Debrief__c/fields/Continuous_Improvement_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Improvement_Implementation__c</fullName>
    <description>Feedback on how we demonstrated continuous improvement during the contract.</description>
    <inlineHelpText>Did we demonstrate how continuous improvement would be implemented throughout the life of the contract?</inlineHelpText>
    <label>Continuous Improvement Implementation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>