Agentforce/force-app/main/default/objects/Debrief__c/fields/Customer_Accepted_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accepted_Debrief__c</fullName>
    <label>Customer Accepted Debrief</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>