Agentforce/force-app/main/default/objects/Debrief__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>RFP Submitted Date</description>
    <formula>Opportunity__r.RFP_Submitted_Date__c</formula>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>