Agentforce/force-app/main/default/objects/Debrief__c/fields/Head_of_Bid__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Bid__c</fullName>
    <description>Head of Bid assigned Full Name</description>
    <formula>Opportunity__r.Head_of_Bid__r.Full_Name__c</formula>
    <label>Head of Bid</label>
    <type>Text</type>
</CustomField>