Agentforce/force-app/main/default/objects/Debrief__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <description>Incumbent Account Name</description>
    <formula>Opportunity__r.Incumbent__r.Name</formula>
    <label>Incumbent</label>
    <type>Text</type>
</CustomField>