Agentforce/force-app/main/default/objects/Debrief__c/fields/Innovation_And_Future_Proofing__c.field-meta.xml
<CustomField>
    <fullName>Innovation_And_Future_Proofing__c</fullName>
    <description>Review of how we demonstrated our future proof approach and innovation</description>
    <inlineHelpText>How innovative were our initiatives compared to other bidders? To what extent did we demonstrate that OCS has a progressive future proof approach?</inlineHelpText>
    <label>Innovation And Future Proofing</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>