Agentforce/force-app/main/default/objects/Debrief__c/fields/Internal_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Feedback_Date__c</fullName>
    <label>Internal Feedback Date</label>
    <type>Date</type>
</CustomField>