Agentforce/force-app/main/default/objects/Debrief__c/fields/ITT_RFP_Brief_Compliance_And_Scoring__c.field-meta.xml
<CustomField>
    <fullName>ITT_RFP_Brief_Compliance_And_Scoring__c</fullName>
    <inlineHelpText>ITT/RFP - Did we meet and or exceed the brief? Were we compliant? Where did we score well? Why? Where did we not score well? Why? What was missing compared to the winning bidder?</inlineHelpText>
    <label>ITT RFP Brief Compliance And Scoring</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>