Agentforce/force-app/main/default/objects/Debrief__c/fields/Key_Criteria_And_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Key_Criteria_And_Outcomes__c</fullName>
    <description>Customers answer to &quot;What were the key criteria and outcomes that you were focussing on in the process?&quot;</description>
    <inlineHelpText>What were the key criteria and outcomes that you were focussing on in the process?</inlineHelpText>
    <label>Key Criteria And Outcomes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>