Agentforce/force-app/main/default/objects/Debrief__c/fields/Key_Stakeholders_And_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholders_And_Decision_Makers__c</fullName>
    <description>Detail of the customers key stakeholders and decision makers within the tender process?</description>
    <inlineHelpText>Who were the key stakeholders and decision makers within the process?</inlineHelpText>
    <label>Key Stakeholders And Decision Makers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>