Agentforce/force-app/main/default/objects/Debrief__c/fields/Mobilisation_Plan_Submission_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Plan_Submission_Requirement__c</fullName>
    <label>Mobilisation Plan Submission Requirement</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>