Agentforce/force-app/main/default/objects/Debrief__c/fields/Mobilisation_Response_Requirements_Exp__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Response_Requirements_Exp__c</fullName>
    <label>Mobilisation Response Requirements &amp; Exp</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>