Agentforce/force-app/main/default/objects/Debrief__c/fields/Operational_Solution_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Operational_Solution_Comparison__c</fullName>
    <description>Review of the operational solution against the brief and where lost, the winning bidder.</description>
    <inlineHelpText>Did our operational solution meet the brief? How did it compare to others bidding including the winning bidder?</inlineHelpText>
    <label>Operational Solution Comparison</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>