Agentforce/force-app/main/default/objects/Debrief__c/fields/Opp_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Opp_CaseSafeID__c</fullName>
    <formula>Opportunity__r.OpportunityCaseSafeID__c</formula>
    <label>Opp CaseSafeID</label>
    <type>Text</type>
</CustomField>