Agentforce/force-app/main/default/objects/Debrief__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Debriefs</relationshipLabel>
    <relationshipName>Debrief</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>