Agentforce/force-app/main/default/objects/Debrief__c/fields/Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_No__c</fullName>
    <description>Opportunity Reference</description>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <label>Opportunity No</label>
    <type>Text</type>
</CustomField>