Agentforce/force-app/main/default/objects/Debrief__c/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <formula>Owner:User.Country</formula>
    <label>Owner Country</label>
    <type>Text</type>
</CustomField>