Agentforce/force-app/main/default/objects/Debrief__c/fields/Presentation_And_Partner_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Presentation_And_Partner_Understanding__c</fullName>
    <description>Review of the Presentation</description>
    <inlineHelpText>Presentation - Did we meet the brief? Did we bring the right people to the presentation? Did we understand what you were looking for in a partner? What was missing compared to others including the winning bidder?</inlineHelpText>
    <label>Presentation And Partner Understanding</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>