Agentforce/force-app/main/default/objects/Debrief__c/fields/Reference_Visit_Relevance__c.field-meta.xml
<CustomField>
    <fullName>Reference_Visit_Relevance__c</fullName>
    <description>Feedback on reference visits</description>
    <inlineHelpText>Reference visits - Were they relevant? Did you achieve what you were hoping to from the visits?</inlineHelpText>
    <label>Reference Visit Relevance</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>