Agentforce/force-app/main/default/objects/Debrief__c/fields/Robust_QSHE_Programme_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Robust_QSHE_Programme_Delivery__c</fullName>
    <description>Feedback on the QSHE programme</description>
    <inlineHelpText>Did we demonstrate a robust QSHE programme that met and or exceeded your requirements?</inlineHelpText>
    <label>Robust QSHE Programme Delivery</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>