Agentforce/force-app/main/default/objects/Debrief__c/fields/Support_For_ESG_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Support_For_ESG_Strategy__c</fullName>
    <description>Feedback on the alignment of their ESG strategy</description>
    <inlineHelpText>Did we support your ESG strategy? What were the positives and negatives? What else could we have done to show more alignment?</inlineHelpText>
    <label>Support For ESG Strategy</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>