Agentforce/force-app/main/default/objects/Debrief__c/fields/Tender_Process_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Tender_Process_Outcome__c</fullName>
    <description>Customers answer to &quot;Did you achieve the outcome of the tender process you wished for?&quot;</description>
    <inlineHelpText>Did you achieve the outcome of the tender process you wished for?</inlineHelpText>
    <label>Tender Process Outcome</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>