Agentforce/force-app/main/default/objects/Debrief__c/fields/Use_Of_External_Consultants__c.field-meta.xml
<CustomField>
    <fullName>Use_Of_External_Consultants__c</fullName>
    <description>Detail around external consultants on the tender process.</description>
    <inlineHelpText>Did you deploy external consultants during the process?</inlineHelpText>
    <label>Use Of External Consultants</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>