Agentforce/force-app/main/default/objects/Debrief__c/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <description>Account Name of Winning Competitor</description>
    <formula>Opportunity__r.Winning_Competitor__r.Name</formula>
    <label>Winning Competitor</label>
    <type>Text</type>
</CustomField>