Agentforce/force-app/main/default/objects/Debrief__c/recordTypes/External_Debrief.recordType-meta.xml
<RecordType>
    <fullName>External_Debrief</fullName>
    <active>true</active>
    <description>Debrief held with the Client</description>
    <label>External Debrief</label>
</RecordType>