Agentforce/force-app/main/default/objects/Debrief__c/recordTypes/Internal_Debrief.recordType-meta.xml
<RecordType>
    <fullName>Internal_Debrief</fullName>
    <active>true</active>
    <description>Debrief held internally</description>
    <label>Internal Debrief</label>
</RecordType>