Agentforce/force-app/main/default/objects/Debrief__c/validationRules/Contact_With_Meeting_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_With_Meeting_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  !$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
   RecordType.Name = &quot;External Debrief&quot;,
  NOT(ISBLANK(Meeting_Date__c)),
  ISBLANK(Contact__c)
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact Required when Meeting Date is set</errorMessage>
</ValidationRule>