Agentforce/force-app/main/default/objects/Debrief__c/validationRules/Lock_when_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_when_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
ISPICKVAL(Status__c, &quot;Closed&quot;)
				)</errorConditionFormula>
    <errorMessage>Unable to change a Closed record.</errorMessage>
</ValidationRule>