Agentforce/force-app/main/default/objects/Debrief__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Date_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>